# url-shortener

./: Cargo.toml  docker-compose.yaml
migrations/: 20240325141134_links.up.sql
src/: main.rs  model.rs  routes.rs  utils.rs
