[package]
name = "link-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
sqlx = { version = "0.7.4", features = ["postgres"] }
tokio = { version = "1.36.0", features = ["full"] }
