[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
base64 = "0.22.0"
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std", "tls-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
